<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Lib_Email</string>
    <string name="email_box">邮箱</string>
    <string name="inbox">收件箱</string>
    <string name="write_email">写邮件</string>
    <string name="email">邮件</string>
    <string name="attachment_list">附件列表</string>
    <string name="email_name">邮箱地址</string>
    <string name="have_send">已发送</string>
    <string name="have_delete">已删除</string>
    <string name="draft">草稿箱</string>
    <string name="junk">垃圾邮件</string>
    <string name="more">更多</string>
    <string name="go_back">返回</string>
    <string name="send">发送</string>
    <string name="reply">回复</string>
    <string name="save">保存</string>
    <string name="ignore">忽略改动</string>
    <string name="delete">删除</string>
    <string name="move">移动</string>
    <string name="fail_into_mailbox">无法进入邮箱</string>
    <string name="account_setup_error">邮箱配置错误！</string>
    <string name="try_into_mailbox">正在检查邮箱配置，请稍后再试……</string>
    <string name="sender">发件人:</string>
    <string name="recipient">收件人:</string>
    <string name="cc">抄送:</string>
    <string name="bcc">密送:</string>
    <string name="subject">主题:</string>
    <string name="MessageError">加载邮件错误</string>
    <string name="sign">标记</string>
    <string name="message_view_show_more_attachments_action">更多…</string>
    <string name="add">添加</string>
    <string name="add_attachment">添加附件</string>
    <string name="adding">正在添加</string>
    <string name="added">添加完成</string>
    <string name="local_storage_provider_internal_label">无法识别的证书信息</string>
    <string name="local_storage_provider_external_label">外部存储（SD卡）</string>
    <string name="local_storage_provider_samsunggalaxy_label">%1$s 额外的内部存储</string>
    <string name="sign_read">标记为已读</string>
    <string name="sign_unread">标记为未读</string>
    <string name="search_all_messages_title">所有邮件</string>
    <string name="search_all_messages_detail">可搜索文件夹中的所有邮件</string>
    <string name="integrated_inbox_title">全局收件箱</string>
    <string name="integrated_inbox_detail">全局收件箱中的所有邮件</string>
    <string name="client_certificate_spinner_empty">无客户端证书</string>
    <string name="client_certificate_spinner_delete">移客户端证书选择</string>
    <string name="attachment_save_title">保存附件</string>
    <string name="attachment_save_desc">没有找到文件管理器。该附件应保存到哪里？</string>
    <string name="okay_action">确定</string>
    <string name="cancel_action">取消</string>
    <string name="message_compose_content_hint">邮件内容</string>
    <string name="compose_title_compose">新邮件</string>
    <string name="compose_title_reply">回复</string>
    <string name="compose_title_reply_all">全部回复</string>
    <string name="compose_title_forward">转发</string>
    <string name="send_failed_reason">发送失败: %s</string>
    <string name="empty_subject">邮件主题为空！</string>
    <string name="message_saved_toast">邮件已保存为草稿</string>
    <string name="message_discarded">邮件已忽略</string>
    <string name="message_discarded_draft">草稿已删除</string>
    <string name="discard_action">忽略</string>
    <string name="save_draft_action">保存为草稿</string>
    <string name="compose_error_incomplete_recipient">收件人地址填写错误</string>
    <string name="cc_compose_error_incomplete_recipient">抄送地址填写错误</string>
    <string name="compose_error_no_draft_folder">错误：没有找到草稿箱。</string>
    <string name="message_compose_attachments_skipped_toast">由于一些附件还没有被下载，因此无法转发这些附件。</string>
    <string name="load_more">加载更多</string>
    <string name="no_email_address">该联系人无可用的邮件地址</string>
	<string name="loading_email">下载邮件中……</string>
    <string name="after_load_all">已下载所有邮件</string>
    <string name="cannot_load_more">无法同步该文件夹</string>
    <string name="account_size_changed">账户“<xliff:g id="account">%s</xliff:g>”已从<xliff:g id="oldSize">%s</xliff:g>缩小到<xliff:g id="newSize">%s</xliff:g></string>
    <string name="unknown_recipient"><![CDATA[<Unknown Recipient>]]></string>
    <string name="abbrev_gigabytes">GB</string>
    <string name="abbrev_megabytes">MB</string>
    <string name="abbrev_kilobytes">KB</string>
    <string name="abbrev_bytes">B</string>
    <string name="address_type_home">Home</string>
    <string name="address_type_work">Work</string>
    <string name="address_type_other">Other</string>
    <string name="address_type_mobile">Mobile</string>
    <string name="message_compose_reply_header_fmt"><xliff:g id="sender">%s</xliff:g> 写到：</string>
    <string name="message_compose_reply_header_fmt_with_date">于 <xliff:g id="sent_date">%1$s</xliff:g>, <xliff:g id="sender">%2$s</xliff:g> 写到:</string>
    <string name="message_compose_error_no_recipients">您必须添加至少一个收件人。</string>
    <string name="error_contact_address_not_found">没有找到该联系人的邮件地址。</string>
    <string name="message_compose_quote_header_send_date">发送时间：</string>
    <string name="message_compose_quote_header_from">发件人：</string>
    <string name="message_compose_quote_header_to">收件人：</string>
    <string name="message_compose_quote_header_cc">抄送：</string>
    <string name="message_compose_quote_header_subject">主题：</string>
    <string name="message_compose_quote_header_separator">--------原始邮件--------</string>
    <string name="sort_earliest_first">优先显示最早的邮件</string>
    <string name="sort_latest_first">优先显示最近的邮件</string>
    <string name="sort_subject_alpha">按主题升序</string>
    <string name="sort_subject_re_alpha">按主题降序</string>
    <string name="sort_sender_alpha">发件人字母</string>
    <string name="sort_sender_re_alpha">发件人字母反序</string>
    <string name="sort_flagged_first">优先显示带有星标的邮件</string>
    <string name="sort_flagged_last">优先显示没有星标的邮件</string>
    <string name="sort_unread_first">优先显示未读邮件</string>
    <string name="sort_unread_last">优先显示已读邮件</string>
    <string name="sort_attach_first">优先显示带有附件的邮件</string>
    <string name="sort_unattached_first">优先显示没有附件的邮件</string>
    <string name="sort_by">排序方式</string>
    <string name="sort_by_date">日期</string>
    <string name="sort_by_arrival">到达时间</string>
    <string name="sort_by_subject">主题</string>
    <string name="sort_by_sender">发件人</string>
    <string name="sort_by_flag">星标</string>
    <string name="sort_by_unread">已读/未读</string>
    <string name="sort_by_attach">附件</string>
    <string name="save_attachment_successful">附件保存成功！</string>
    <string name="attachment_loading">附件上传中</string>
    <string name="attachment_too_much">附件总大小不能超过10M!</string>
    <string name="CA_error">证书认证失败</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_from_bottom_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">正在载入…</string>
    <string name="account_settings_autodownload_message_size_label">收取邮件的最大尺寸为</string>
    <string name="account_settings_autodownload_message_size_any">任意（无限制）</string>
    <string name="account_settings_autodownload_message_size_1">1Kb</string>
    <string name="account_settings_autodownload_message_size_2">2Kb</string>
    <string name="account_settings_autodownload_message_size_4">4Kb</string>
    <string name="account_settings_autodownload_message_size_8">8Kb</string>
    <string name="account_settings_autodownload_message_size_16">16Kb</string>
    <string name="account_settings_autodownload_message_size_32">32Kb</string>
    <string name="account_settings_autodownload_message_size_64">64Kb</string>
    <string name="account_settings_autodownload_message_size_128">128Kb</string>
    <string name="account_settings_autodownload_message_size_256">256Kb</string>
    <string name="account_settings_autodownload_message_size_512">512Kb</string>
    <string name="account_settings_autodownload_message_size_1024">1Mb</string>
    <string name="account_settings_autodownload_message_size_2048">2Mb</string>
    <string name="account_settings_autodownload_message_size_5120">5Mb</string>
    <string name="account_settings_autodownload_message_size_10240">10Mb</string>
    <string name="special_mailbox_name_drafts_fmt"><xliff:g id="folder">%s</xliff:g>（草稿箱）</string>
    <string name="special_mailbox_name_trash_fmt"><xliff:g id="folder">%s</xliff:g>（垃圾箱）</string>
    <string name="special_mailbox_name_sent_fmt"><xliff:g id="folder">%s</xliff:g>（已发送）</string>
    <string name="special_mailbox_name_archive_fmt"><xliff:g id="folder">%s</xliff:g>（归档）</string>
    <string name="special_mailbox_name_spam_fmt"><xliff:g id="folder">%s</xliff:g>（垃圾邮件）</string>
    <string name="special_mailbox_name_inbox">收件箱</string>
    <string name="special_mailbox_name_outbox">发件箱</string>
    <string name="message_to_label">收件人：</string>
    <string name="read_attachment_label">阅读邮件附件</string>
    <string name="read_attachment_desc">允许该程序读取邮件附件。</string>
    <string name="read_messages_label">显示邮件</string>
    <string name="read_messages_desc">允许该程序读取邮件。</string>
    <string name="delete_messages_label">删除邮件</string>
    <string name="delete_messages_desc">允许该程序删除邮件。</string>
    <string name="remote_control_label">远程控制</string>
    <string name="remote_control_desc">允许这个程序控制光明地产</string>
    <string name="notification_new_one_account_fmt">您有<xliff:g id="unread_message_count">%d</xliff:g>封未读邮件（<xliff:g id="account">%s</xliff:g>）</string>
    <string name="notification_new_title">您有新邮件</string>
    <string name="notification_additional_messages">+ 來自<xliff:g id="account">%2$s</xliff:g>已超过<xliff:g id="additional_messages">%1$d</xliff:g>条信息</string>
    <string name="notification_action_reply">回复</string>
    <string name="notification_action_mark_as_read">标记为已读</string>
    <string name="notification_action_mark_all_as_read">标记所有为已读</string>
    <string name="notification_action_delete">删除</string>
    <string name="notification_action_delete_all">删除所有</string>
    <string name="notification_action_archive">存档</string>
    <string name="notification_action_archive_all">存档所有</string>
    <string name="notification_action_spam">垃圾邮件</string>
    <string name="notification_certificate_error_title"><xliff:g id="account">%s</xliff:g> 认证错误</string>
    <string name="notification_certificate_error_text">请检查您的服务器设置</string>
    <string name="notification_bg_sync_ticker">正在检查邮件：<xliff:g id="account">%s</xliff:g>：<xliff:g id="folder">%s</xliff:g></string>
    <string name="notification_bg_sync_title">正在检查邮件</string>
    <string name="notification_bg_send_ticker">正在发送邮件：<xliff:g id="account">%s</xliff:g></string>
    <string name="notification_bg_send_title">发送邮件</string>
    <string name="notification_bg_title_separator">：</string>
    <string name="notification_authentication_error_title">Authentication failed</string>
    <string name="notification_authentication_error_text">Authentication failed for <xliff:g id="account">%s</xliff:g>. Update your server settings.</string>
    <string name="default_signature">-- \n使用光明地产发送。</string>
    <string name="default_identity_description">初始身份标识</string>
    <string name="message_header_mua">Mail for Android</string>
    <string name="send_failure_subject">一些邮件没有成功发送</string>
    <string name="send_alternate_chooser_title">选择发件人</string>
    <string name="message_to_fmt">收件人: <xliff:g id="counterParty">%s</xliff:g></string>
    <string name="general_no_sender">无发件人</string>
    <string name="preview_encrypted">*Encrypted*</string>
    <string name="message_view_status_attachment_not_saved">无法将附件保存到SD卡。</string>
    <string name="message_view_status_attachment_not_saved_or_view">无法保存或预览该文件。</string>
    <string name="reply_or_refile">回复/转发</string>
    <string name="reply_all">回复所有</string>
    <string name="close">关闭</string>
    <string name="your_email_account">您的邮箱账号为:</string>
    <string name="your_email_password">输入邮箱密码</string>
    <string name="your_email_password_error">* 您输入的密码有误,请重新输入</string>
</resources>