<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/go_back"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/txt_reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reply"
                android:textSize="@dimen/sp_14"/>

            <TextView
                android:id="@+id/txt_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textSize="@dimen/sp_14"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/txt_move"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/move"
                android:textSize="@dimen/sp_14"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/grey" />

</LinearLayout>
