<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EmailContentActivity"
    android:orientation="vertical">

    <include layout="@layout/comm_topbar_style_3"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="@dimen/dp_6">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/sender"
               android:textSize="@dimen/sp_14"
               android:layout_marginLeft="@dimen/dp_5"/>

           <TextView
               android:id="@+id/sender"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="@dimen/sp_14"
               android:maxLines="1"
               android:ellipsize="end"
               android:textStyle="bold"
               android:layout_marginLeft="@dimen/dp_5"
               android:layout_marginRight="@dimen/dp_5"/>

       </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipient"
            android:textSize="@dimen/sp_14"
            android:layout_marginLeft="@dimen/dp_5"/>

        <TextView
            android:id="@+id/recipients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/grey"
        android:layout_marginTop="@dimen/dp_6"/>

    <LinearLayout
        android:id="@+id/linear_cc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dp_6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc"
                android:textSize="@dimen/sp_14"
                android:layout_marginLeft="@dimen/dp_5"/>

            <TextView
                android:id="@+id/txt_cc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:layout_marginLeft="@dimen/dp_5"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/grey"
            android:layout_marginTop="@dimen/dp_6"/>

    </LinearLayout>

    <TextView
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_6"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_14"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginTop="@dimen/dp_6"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/grey"
        android:layout_marginTop="@dimen/dp_6"/>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/message_containers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_5">

        <FrameLayout
            android:id="@+id/frame_sign"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

              
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/sign"
                  android:textSize="@dimen/sp_12"
                  android:drawableTop="@drawable/icon_sign"
                  android:layout_gravity="center"/>


        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_delete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textSize="@dimen/sp_12"
                android:drawableTop="@drawable/email_delete"
                android:layout_gravity="center"/>


        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_reply"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reply_or_refile"
                android:textSize="@dimen/sp_12"
                android:drawableTop="@drawable/icon_reply"
                android:layout_gravity="center"/>


        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_replyAll"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reply_all"
                android:textSize="@dimen/sp_12"
                android:drawableTop="@drawable/icon_reply"
                android:layout_gravity="center"/>


        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_more"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:visibility="gone">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:textSize="@dimen/sp_12"
                android:drawableTop="@drawable/icon_more"
                android:layout_gravity="center"/>


        </FrameLayout>

        
    </LinearLayout>

</LinearLayout>
