<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_25"
    android:background="@drawable/m_shape_chat_edit_text_bg"
    android:layout_gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_email_account"
        android:textSize="@dimen/sp_16"
        android:textColor="#666666"/>
    <TextView
        android:id="@+id/tv_email_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_3"
        android:textColor="#666666"
        android:textSize="@dimen/sp_15"
        android:text="zorotest1@winmail.movit-tech.com"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black_0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/your_email_password"
        android:textSize="@dimen/sp_16"
        android:textColor="#666666"/>

    <EditText
        android:id="@+id/et_email_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_3"
        android:paddingLeft="@dimen/dp_3"
        android:paddingRight="@dimen/dp_3"
        android:textSize="@dimen/sp_16"
        android:inputType="textPassword"
        android:background="@drawable/m_shape_chat_edit_text_bg"/>

    <TextView android:visibility="gone"
        android:id="@+id/tv_email_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginStart="@dimen/dp_12"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/red"
        android:text="@string/your_email_password_error"/>

    <Button
        android:id="@+id/bt_email"
        android:layout_width="@dimen/dp_140"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_gravity="center_horizontal"
        android:background="@color/red"
        android:text="@string/email_commit"
        android:textSize="@dimen/sp_18"
        android:textColor="@android:color/white"/>

</LinearLayout>