<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.EmailListActivity">


    <RelativeLayout
        android:id="@+id/relative_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@color/top_bg_color" >

        <TextView
            android:id="@+id/common_top_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:id="@+id/txt_top_left"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_25"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:gravity="center"
            android:textColor="@color/m_top_right_text_color_selector"
            android:textSize="@dimen/sp_14"
            android:text="@string/email_box"
            android:drawableLeft="@drawable/top_back"
            android:drawablePadding="@dimen/dp_5"/>

        <TextView
            android:id="@+id/txt_top_right"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_25"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:gravity="center"
            android:textColor="@color/m_top_right_text_color_selector"
            android:textSize="@dimen/sp_14"
            android:text="@string/close"/>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/framelayout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_title">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/search_box"
           android:layout_marginRight="@dimen/dp_16"
           android:layout_marginLeft="@dimen/dp_16"
           android:layout_marginTop="@dimen/dp_8"
           android:layout_marginBottom="@dimen/dp_8"
           android:orientation="horizontal">

           <ImageView
               android:id="@+id/img_search"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/icon_search"
               android:layout_gravity="center_vertical"
               android:layout_marginLeft="@dimen/dp_6"/>

           <EditText
               android:id="@+id/edit_search"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:imeOptions="actionSearch"
               android:singleLine="true"
               android:textSize="@dimen/sp_15"
               android:hint="@string/search"
               android:background="@null"
               android:layout_marginLeft="@dimen/dp_4"
               android:layout_marginRight="@dimen/dp_6"/>


       </LinearLayout>

    </FrameLayout>

    <ListView
        android:id="@+id/result_list"
        android:layout_below="@+id/framelayout_search"
        android:layout_above="@+id/relative_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <com.movit.platform.mail.pulltorefresh.PullToRefreshListView
        android:id="@+id/email_list"
        android:layout_below="@+id/framelayout_search"
        android:layout_above="@+id/relative_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:id="@+id/relative_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/grey"/>

        <TextView
            android:id="@+id/text_add_more"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/load_more"
            android:textSize="@dimen/sp_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"/>
        
        <ImageView
            android:id="@+id/img_write_email"
            android:layout_width="@dimen/dp_26"
            android:layout_height="@dimen/dp_26"
            android:src="@drawable/write_email_blue"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_16"/>


    </RelativeLayout>

</RelativeLayout>
